# Python-VSCode-Template

./: .gitignore  Pipfile  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
