[tool.poetry]
name = "python-vscode-template"
version = "0.1.0"
description = "It's a Template repository when using Python and VSCode."
authors = ["ikumi-rai"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = {git = "https://github.com/psf/black.git", rev = "main"}
pytest = "*"
pytest-mock = "*"
pytest-timeout = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
